[project]
name = "openclaw-ton-skill"
version = "0.1.0"
description = "OpenClaw TON Blockchain Skill"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.5",
    "pynacl>=1.6.2",
    "requests>=2.32.5",
    "tonsdk>=1.0.15",
]

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "codecov>=2.1.13",
    "coverage[toml]>=7.13.4",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.1",
    "safety>=3.7.0",
]
